--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,6 @@
 <ion-view>
   <ion-content scroll="false">
-
+    <a href="#/app/chat">chat</a>
+    <a href="#/app/newchat">new chat</a>
   </ion-content>
 </ion-view>
