--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,7 @@
 <ion-view>
   <ion-content scroll="false">
-    <a href="#/app/chat">chat</a>
-    <a href="#/app/newchat">new chat</a>
+    <a ui-sref="app.chat">chat</a>
+    <a ui-sref="app.newchat">new chat</a>
+    <a ui-sref="app.lobby">lobby</a>
   </ion-content>
 </ion-view>
