--- a/www/templates/new-message.html
+++ b/www/templates/new-message.html
@@ -1,23 +1,19 @@
 <ion-view>
   <ion-content scroll="false">
-    <form ui-keypress="{13:'createChat()'}">
-      <div class="list list-inset">
-        <label class="item item-input item-stacked-label">
-          <span class="input-label">Chat room name</span>
-          <input type="text" placeholder="e.g. Homework Discussion" data-ng-model="newChatName" data-ng-change="setnewChatNameId()">
-        </label>
-        <label class="item item-input item-stacked-label">
-          <span class="input-label">Chat ID</span>
-          <input type="text"  data-ng-model="newChatNameId" readonly="readonly">
-        </label>
-        <label class="item item-input item-stacked-label">
-          <span class="input-label">Chat room description</span>
-          <input type="text" placeholder="e.g. How to do recursion" data-ng-model="newChatDescription" >
-        </label>
-      </div>
-      <div class="padding">
-        <button class="button button-full button-positive" ng-click="createChat()">Submit</button>
-      </div>
+    <form ui-keypress="{13:'createRoom()'}">
+        <div class="list list-inset">
+            <label class="item item-input item-stacked-label">
+                <span class="input-label">Chat room name</span>
+                <input type="text" placeholder="e.g. Homework Discussion" ng-model="newRoomName">
+            </label>
+            <label class="item item-input item-stacked-label">
+                <span class="input-label">Chat room description</span>
+                <input type="text" placeholder="e.g. How to do recursion" ng-model="newRoomDescription" >
+            </label>
+        </div>
+        <div class="padding">
+            <button class="button button-full button-positive" ng-click="createRoom(newRoomName, newRoomDescription)">Submit</button>
+        </div>
     </form>
   </ion-content>
 </ion-view>
