--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -1,13 +1,17 @@
 <ion-view>
-  <ion-content scroll="false">
+  <ion-content>
     <refresher></refresher>
 
     <div ng-repeat="message in messages | orderBy:'created_at'" type="item-text-wrap" ng-show="message.content">
-      <div class="item item-body message">
-        <div class="row">
-          <div class="col col-10 author">{{message.created_by}}</div>
-          <div class="col content">{{message.content}}</div>
-          <div class="col col-10 time">{{message.created_at}}</div>
+      <div class="card item-message">
+        <div class="item-message-header">
+          <div class="row">
+            <small class="col">{{message.created_by}}:</small>
+            <small class="col text-right">{{message.created_at | date: 'short' }}</small>
+          </div>
+        </div>
+        <div class="item-message-body item-text-wrap">
+          {{message.content}}
         </div>
       </div>
     </div>
