account activated by key

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -18,6 +18,9 @@
     <button class="button-block button-positive" style="font-size:18px;" ui-sref="app.register">
       Cadastre-se no App
     </button>
+    <button class="button-block button-positive" style="font-size:18px;" ui-sref="app.activateaccount">
+      Ativar Conta
+    </button>
 
   </ion-content>
 </ion-view>
