--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -15,5 +15,10 @@
         Logout
       </button>
     </div>
+    <div class="button-bar">
+      <button ng-controller="UsersCtrl" class="button button-small button-positive light-bg waves-effect waves-button waves-light" ng-click="allUsers()"ui-sref="app.users">
+        Usuarios
+      </button>
+    </div>
   </ion-content>
 </ion-view>
