--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -23,7 +23,10 @@
     <button class="button-block button-positive" style="font-size:18px;" ui-sref="app.activateaccount">
       Ativar Conta
     </button>
-    
+    <button class="button-block button-positive" style="font-size:18px;" ng-click="loginFacebook()">
+      loginFacebook
+    </button>
+
 
   </ion-content>
 </ion-view>
