Add chat username

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -20,5 +20,10 @@
         Usuarios
       </button>
     </div>
+    <div class="button-bar">
+      <button class="button button-small button-positive light-bg waves-effect waves-button waves-light" ui-sref="app.chat">
+       home
+      </button>
+    </div>
   </ion-content>
 </ion-view>
