--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -26,6 +26,9 @@
     <button class="button-block button-positive" style="font-size:18px;" ng-click="loginFacebook()">
       loginFacebook
     </button>
+    <button class="button-block button-positive" style="font-size:18px;" ng-click="alterarFoto()">
+    foto
+    </button>
 
 
   </ion-content>
