--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,11 @@
   width: 100%;
 }
 
+.margin-carai {
+  display: inline-block;
+  margin-right: 10vw;
+}
+
 .item-message {
   background-color: #DEF;
 }
@@ -19,6 +24,503 @@
   font-style: italic;
 }
 
+.background-home {
+  background-color: #fbfbfb;
+}
+
+a,
+.margin-cadestro {
+  color: #000;
+  text-align: center;
+}
+
 .item-message-body {
   padding: 4px 20px;
 }
+
+.padding-login {
+  padding: 5px 50px;
+}
+
+.padding-button {
+  margin: auto;
+  width: 200px;
+}
+
+.foot-social {
+  position: fixed;
+  background-color: #c9c9c9;
+  height: 120px;
+  width: 100%;
+  bottom: 0;
+}
+
+/* Hero
+==================================*/
+.hero {
+  background-size: cover;
+  box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+  color: #fff;
+  height: 200px;
+  position: relative;
+  text-align: center;
+  -webkit-transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  width: 100%; }
+
+.hero > * {
+  -webkit-transition: opacity 2.5s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 2.5s cubic-bezier(0.55, 0, 0.1, 1);
+  opacity: 1;
+  filter: alpha(opacity=100); }
+
+.hero + .mid-bar {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
+  height: initial;
+  opacity: 1;
+  filter: alpha(opacity=100); }
+
+.hero .hero-icon {
+  box-shadow: 0px 0 2px 0 rgba(0, 0, 0, 0.26);
+  border-radius: 50%;
+  display: inline-block;
+  font-size: 65px;
+  height: 150px;
+  padding: 10px 30px;
+  line-height: 136px;
+  width: 150px; }
+
+.hero.no-header {
+  height: 244px; }
+
+.hero > .content {
+  bottom: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  z-index: 1; }
+
+.hero > .content > .avatar {
+  background-position: center;
+  background-size: cover;
+  border: solid 1px rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  display: inline-block;
+  height: 88px;
+  left: auto;
+  margin-bottom: 10px;
+  position: relative;
+  width: 88px; }
+
+.hero h1 .hero h2, .hero h3, .hero h4, .hero h5, .hero h6 {
+  color: #fff;
+  margin: 0; }
+
+.hero h4 {
+  color: rgba(255, 255, 255, 0.7);
+  margin: 3px 0 16px; }
+
+.hero h1 > a, .hero h2 > a, .hero h3 > a, .hero h4 > a, .hero h5 > a, .hero h6 > a {
+  text-decoration: none; }
+
+.hero + .button-bar {
+  border-radius: 0;
+  margin-top: 0; }
+
+.hero + .button-bar > .button:first-child, .hero + .button-bar > .button:last-child {
+  border-radius: 0; }
+
+.hero .hero-icon {
+  color: #fff;
+  font-size: 96px; }
+
+.hero .hero-icon + h1 {
+  color: white;
+  letter-spacing: 0.15rem; }
+
+.hero .button, .hero .button.button-large, .hero .button.button-flat {
+  margin: 0; }
+
+.hero h1.title {
+  color: #fff;
+  font-size: 23px;
+  margin: 0;
+  text-align: left;
+  padding-left: 80px;
+  line-height: 59px; }
+
+.hero + .mid-bar {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
+  height: initial;
+  opacity: 1;
+  filter: alpha(opacity=100); }
+
+.hero > * {
+  -webkit-transition: opacity 2.5s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: opacity 2.5s cubic-bezier(0.55, 0, 0.1, 1);
+  opacity: 1;
+  filter: alpha(opacity=100); }
+
+.app-icon {
+    background-color: #fff;
+    background: url('../img/login.png') center;
+    background-size: cover;
+    height: 150px;
+    margin: 40px auto;
+    width: 170px;
+}
+
+/* Directives : MD Label
+==================================*/
+.item-md-label {
+  display: block;
+  background: transparent;
+  box-shadow: none;
+  margin-left: 12px;
+  margin-right: 12px;
+  padding: 30px 0 0; }
+
+.item-md-label .input-label {
+  font-weight: bold;
+  position: absolute;
+  padding: 5px 0 0;
+  z-index: 2;
+  -webkit-transform: translate3d(0, -30px, 0) scale(1);
+  transform: translate3d(0, -30px, 0) scale(1);
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  -webkit-transform-origin: 0;
+  -ms-transform-origin: 0;
+  transform-origin: 0; }
+
+.item-md-label input {
+  bottom: 0;
+  letter-spacing: 0.25rem;
+  padding: 20px 10px;
+  position: relative;
+  z-index: 1; }
+
+.item-md-label .highlight {
+  position: absolute;
+  bottom: 0;
+  height: 2px;
+  left: 0;
+  width: 100%;
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+  -webkit-transition: all 0.15s ease;
+  transition: all 0.15s ease;
+  z-index: 1; }
+
+.item-md-label .highlight-light {
+  background: #fff; }
+
+.item-md-label .highlight-stable {
+  background: #f8f8f8; }
+
+.item-md-label .highlight-positive {
+  background: #387ef5; }
+
+.item-md-label .highlight-calm {
+  background: #11c1f3; }
+
+.item-md-label .highlight-balanced {
+  background: #3db8b8; }
+
+.item-md-label .highlight-energized {
+  background: #ffc900; }
+
+.item-md-label .highlight-assertive {
+  background: #ef473a; }
+
+.item-md-label .highlight-royal {
+  background: #886aea; }
+
+.item-md-label .highlight-dark {
+  background: #444; }
+
+.item-md-label .input-label {
+  letter-spacing: 0.25rem;
+  padding: 0 10px; }
+
+.item-md-label input:focus ~ .input-label, .item-md-label input.used ~ .input-label {
+  font-weight: bold;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  padding: 0;
+  text-transform: uppercase;
+  -webkit-transform: translate3d(0, -60px, 0) scale(0.9);
+  transform: translate3d(0, -60px, 0) scale(0.9); }
+
+.item-md-label input:focus ~ .highlight {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+  /* List
+==================================*/
+.content + .list {
+  padding-top: 0; }
+
+.list .item {
+  border: none;
+  /*
+    padding-left: 16px;
+    padding-right: 16px;
+    */
+  text-align: left; }
+
+.list .item.tabs {
+  padding: initial; }
+
+.list .item.item-bg-image {
+  max-height: 150px;
+  min-height: 150px; }
+
+.list .item.item-bg-image > img {
+  height: 100%;
+  left: 0;
+  max-width: initial;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 0; }
+
+.list a.item {
+  opacity: 1;
+  filter: alpha(opacity=100); }
+
+.list .item.item-bg-image h1, .list .item.item-bg-image h2, .list .item.item-bg-image h3, .list .item.item-bg-image h4, .list .item.item-bg-image h5, .list .item.item-bg-image h6 {
+  color: #fff;
+  font-weight: bold;
+  position: relative;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.95);
+  z-index: 1; }
+
+.list .item.item-bg-image h2 {
+  font-size: 24px; }
+
+.list .item.item-bg-image h2 {
+  font-size: 24px; }
+
+.list .item.item-bg-image p {
+  color: white;
+  font-size: 17px;
+  position: relative;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.95);
+  z-index: 1; }
+
+.item-avatar, .item-avatar .item-content, .item-avatar-left, .item-avatar-left .item-content {
+  min-height: 80px; }
+
+/* List: Thumbnails
+==================================*/
+.item-thumbnail-left, .card > .item.item-thumbnail-left, .item-thumbnail-left .item-content {
+  padding-left: 106px; }
+
+.item-thumbnail-right, .card > .item.item-thumbnail-right, .item-thumbnail-right .item-content {
+  padding-right: 106px; }
+
+/* List: Avatar
+==================================*/
+.item-avatar > img:first-child, .item-avatar .item-image, .item-avatar .item-content > img:first-child, .item-avatar .item-content .item-image, .item-avatar-left > img:first-child, .item-avatar-left .item-image, .item-avatar-left .item-content > img:first-child, .item-avatar-left .item-content .item-image {
+  border-radius: 50%;
+  left: 16px;
+  max-height: 40px;
+  max-width: 40px; }
+
+/*
+.item-avatar, .list .item-avatar {
+    padding-left: 100px;
+}
+*/
+.avatar, .item-avatar .avatar {
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  display: inline-block;
+  height: 56px;
+  left: 16px;
+  position: absolute;
+  width: 56px; }
+
+/* List: Gallery
+==================================*/
+.list.half {
+  display: inline-block;
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: 50%; }
+
+.list.half:first-child {
+  padding: 16px 8px 16px 16px; }
+
+.list.half:last-child {
+  padding: 16px 16px 16px 8px; }
+
+.list.half:first-child .card.card-gallery {
+  margin-left: 0;
+  margin-right: 0; }
+
+.list.half:last-child .card.card-gallery {
+  margin-left: 0;
+  margin-right: 0; }
+
+.list.condensed-space > .card, .list.condensed-space > .item {
+  margin: 0px 0px 2px; }
+
+.list .card.card-gallery {
+  display: block;
+  float: left;
+  margin: 0 0 0 13px;
+  padding: 0;
+  width: auto; }
+
+.list.half .item {
+  width: 100%; }
+
+.list.half .item.card {
+  margin-bottom: 16px; }
+
+.list .card.card-gallery.item h2 {
+  padding: 12px; }
+
+.list .item.item-gallery img {
+  width: 100%; }
+
+.item.item-divider {
+  border-top: solid 1px rgba(0, 0, 0, 0.12);
+  font-size: 14px;
+  font-weight: bold;
+  height: 48px;
+  line-height: 48px;
+  color: rgba(0, 0, 0, 0.54); }
+  .item.item-divider:first-child {
+    border: none; }
+
+.item-avatar, .item-avatar .item-content, .item-avatar-left, .item-avatar-left .item-content, .card > .item-avatar {
+  padding-left: 72px; }
+
+.item.active, .item.activated, .item-complex.active .item-content, .item-complex.activated .item-content, .item .item-content.active, .item .item-content.activated {
+  background-color: transparent; }
+
+.list-inset {
+  margin: 20px 30px;
+  border-left: solid 1px #ccc;
+  border-radius: 0;
+  background-color: #fff; }
+
+.list .item.item-floating-label,
+.item-floating-label {
+  border-bottom: solid 1px #ccc; }
+
+.loader {
+  position: relative;
+  margin: 0px auto;
+  width: 100px;
+  height: 100px;
+  zoom: 1.7; }
+
+.circular {
+  -webkit-animation: rotate 2s linear infinite;
+  animation: rotate 2s linear infinite;
+  height: 100px;
+  position: relative;
+  width: 100px; }
+
+.path {
+  stroke-dasharray: 1,200;
+  stroke-dashoffset: 0;
+  -webkit-animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  stroke-linecap: round; }
+
+@-webkit-keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@-webkit-keyframes dash {
+  0% {
+    stroke-dasharray: 1,200;
+    stroke-dashoffset: 0; }
+  50% {
+    stroke-dasharray: 89,200;
+    stroke-dashoffset: -35; }
+  100% {
+    stroke-dasharray: 89,200;
+    stroke-dashoffset: -124; } }
+
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1,200;
+    stroke-dashoffset: 0; }
+  50% {
+    stroke-dasharray: 89,200;
+    stroke-dashoffset: -35; }
+  100% {
+    stroke-dasharray: 89,200;
+    stroke-dashoffset: -124; } }
+
+@-webkit-keyframes color {
+  100%, 0% {
+    stroke: #d62d20; }
+  40% {
+    stroke: #0057e7; }
+  66% {
+    stroke: #008744; }
+  80%, 90% {
+    stroke: #ffa700; } }
+
+@keyframes color {
+  100%, 0% {
+    stroke: #d62d20; }
+  40% {
+    stroke: #0057e7; }
+  66% {
+    stroke: #008744; }
+  80%, 90% {
+    stroke: #ffa700; } }
+
+.button-clear .ink-ripple,
+*[class$="-clear"] > .ink-ripple,
+*[class$="-light"] > .ink-ripple,
+*[class$="-stable"] > .ink-ripple,
+*[class$="-100"] > .ink-ripple,
+.list .ink-ripple,
+.ink-dark .ink-ripple {
+  background-color: rgba(0, 0, 0, 0.2); }
+
+.no-padding, .list.no-padding, .bar.no-padding, .button-bar.no-padding, .card.no-padding, .button.no-padding, .item.no-padding {
+  padding: 0; }
+
+.list .item.item-bg-image,
+.list .item.item-bg-image {
+  max-height: 150px; }
+
+  .list-inset {
+    margin: 20px 30px;
+    border-left: solid 1px #ccc;
+    border-radius: 0;
+    background-color: #fff; }
+
+  .list .item.item-floating-label,
+  .item-floating-label {
+    border-bottom: solid 1px #ccc; }
