--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,1 +1,7 @@
-<ion-nav-view name="menuContent"></ion-nav-view>
+<ion-side-menus enable-menu-with-back-views="true">
+  <ion-nav-bar class="bar bar-positive">
+    <ion-nav-back-button ></ion-nav-back-button>
+  </ion-nav-bar>  <ion-side-menu-content>
+    <ion-nav-view name="menuContent"></ion-nav-view>
+  </ion-side-menu-content>
+</ion-side-menus>
