locations and checkin

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -21,6 +21,11 @@
       </button>
     </div>
     <div class="button-bar">
+      <button ng-controller="locationsCtrl" class="button button-small button-positive light-bg waves-effect waves-button waves-light" ng-click="allLocations()"ui-sref="app.locations">
+        lugares
+      </button>
+    </div>
+    <div class="button-bar">
       <button class="button button-small button-positive light-bg waves-effect waves-button waves-light" ui-sref="app.chat">
        home
       </button>
