--- a/www/css/style.css
+++ b/www/css/style.css
@@ -529,3 +529,33 @@ a,
   .list .item.item-floating-label,
   .item-floating-label {
     border-bottom: solid 1px #ccc; }
+
+    .company-navigation{
+      margin-bottom: 1em;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    }
+    .company-navigation h2{
+      position: absolute;
+      z-index: 1;
+    }
+    .company-navigation img{
+      width:100%;
+      height:225px;
+    }
+    .company-carousel{
+      width:100%;
+      max-height:225px;
+    }
+    .company-navigation{
+      background-size: 100%;
+      height: 225px;
+      z-index: 1;
+    }
+    .company-navigation h2,
+    .company-navigation p,
+    .company-navigation span{
+      color: #fff;
+    }
+    .company-navigation h2{
+      font-size: 1.5em;
+    }
