--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -1,7 +1,7 @@
 <ion-view>
   <ion-content overflow-scroll="false">
     <ion-list ng-repeat="location in locations">
-      <div scroll="false" class="company-navigation" data-tap-disabled="true" ng-click="viewLocation(company.name)">
+      <div scroll="false" class="company-navigation" data-tap-disabled="true" ng-click="viewLocation(location.name);doCheckin(location)">
         <h2>{{location.name}}</h2>
         <img ng-src="{{location.image}}"/>
       </div>
