--- a/www/css/style.css
+++ b/www/css/style.css
@@ -24,6 +24,10 @@
   font-style: italic;
 }
 
+.padding-register {
+  padding: 20px 50px;
+}
+
 .background-home {
   background-color: #fbfbfb;
 }
@@ -530,32 +534,38 @@ a,
   .item-floating-label {
     border-bottom: solid 1px #ccc; }
 
-    .company-navigation{
-      margin-bottom: 1em;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-    }
-    .company-navigation h2{
-      position: absolute;
-      z-index: 1;
-    }
-    .company-navigation img{
-      width:100%;
-      height:225px;
-    }
-    .company-carousel{
-      width:100%;
-      max-height:225px;
-    }
-    .company-navigation{
-      background-size: 100%;
-      height: 225px;
-      z-index: 1;
-    }
-    .company-navigation h2,
-    .company-navigation p,
-    .company-navigation span{
-      color: #fff;
-    }
-    .company-navigation h2{
-      font-size: 1.5em;
-    }
+.company-navigation{
+  margin-bottom: 1em;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+}
+.company-navigation h2{
+  position: absolute;
+  z-index: 1;
+}
+.company-navigation img{
+  width:100%;
+  height:225px;
+}
+.company-carousel{
+  width:100%;
+  max-height:225px;
+}
+.company-navigation{
+  background-size: 100%;
+  height: 225px;
+  z-index: 1;
+}
+.company-navigation h2,
+.company-navigation p,
+.company-navigation span{
+  color: #fff;
+}
+.company-navigation h2{
+  font-size: 1.5em;
+}
+
+.bar-gray {
+  border-color: #0c63ee;
+  background-color: #387ef5;
+  background-image: linear-gradient(0deg, #0c63ee, #0c63ee 50%, transparent 50%);
+  color: #fff; }
