Add primeiro passo page

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,7 @@
 <ion-view hide-nav-bar="true">
   <ion-content scroll="false" class="background-home">
-    <!-- <a ui-sref="app.chat">chat</a>
+    <!-- <a ui-sref="app.primeiraTelaEdit">bla</a>
+    <a ui-sref="app.chat">chat</a>
     <a ui-sref="app.newchat">new chat</a>
     <a ui-sref="app.lobby">lobby</a> -->
 
@@ -13,7 +14,7 @@
       <ion-md-input placeholder="E-mail" highlight-color="balanced" type="text" ng-model="user.email"></ion-md-input>
       <ion-md-input placeholder="Senha" highlight-color="balanced" type="password" ng-model="user.password"></ion-md-input>
       <div class="padding-bla">
-        <input type="submit" class="button button-block button-calm" ng-click="loginEmail(user)" ui-sref="app.profile"/>
+        <input type="submit" class="button button-block button-calm" ng-click="loginEmail(user)"/>
       </div>
     </div>
   </div>
