--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,64 @@
   width: 100%;
 }
 
+.profile-edit-button {
+  position: relative;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  -webkit-border-radius: 15%;
+  top: -100px;
+  margin-left: calc(50% - 35px);
+  height: 18px;
+  line-height: 10px;
+  border: 1px solid #808080;
+  text-align: center;
+  width: 70px;
+  padding: 0px!important;
+  font-size: 12px;
+  color: #808080;
+}
+
+.profile-image {
+  position:relative;
+  margin-top: 20%;
+  margin-left: calc(50% - 8px);
+  width:100%;
+  height:13em;
+}
+
+.damn {
+  margin-top: 10%;
+  font-size: 15pt;
+  font-weight: bold;
+  text-align: center;
+}
+
+.profile-image img {
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+  height: 8em;
+  width: 8em;
+}
+
+.center-carai{
+  margin-top: 20px;
+}
+
+.circle-number {
+  margin: auto;
+  background: #cccccc;
+  border-radius: 0.8em;
+  -moz-border-radius: 0.8em;
+  -webkit-border-radius: 0.8em;
+  color: #fff;
+  font-size: 30pt;
+  font-weight: bold;
+  line-height: 1.6em;
+  text-align: center;
+  width: 1.6em;
+}
+
 .margin-carai {
   display: inline-block;
   margin-right: 10vw;
@@ -36,6 +94,17 @@ a,
 .margin-cadestro {
   color: #000;
   text-align: center;
+}
+
+.padding-tela1 {
+  padding: 0 50px;
+}
+
+.margin-grey {
+  color: #ccc;
+  text-align: center;
+  font-size: 15pt;
+  font-weight: bold;
 }
 
 .item-message-body {
