--- a/www/templates/primeiraTelaEdit.html
+++ b/www/templates/primeiraTelaEdit.html
@@ -62,14 +62,11 @@
             <textarea placeholder="Descrição"></textarea>
           </label>
         </div>
-        <div class="col col-40">
-          <span>Sexo:</span>
-          <select style="border-radius: 5px;margin-top:5px;" class="item item-select" ng-model="user.gender">
-            <option ng-selected="true">Masculino</option>
-            <option>Feminino</option>
-          </select>
-        </div>
       </div>
+    <span class="labels"></br></span>
+        <a class="sparara">Continuar</a>
+        <span class="labels"></br></span>
+        <span class="labels"></br></span>
     </div>
   </ion-content>
 </ion-view>
