--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
 <ion-view hide-nav-bar="true">
   <ion-content scroll="false" class="background-home">
-    <!-- <a ui-sref="app.primeiraTelaEdit">bla</a>
-    <a ui-sref="app.chat">chat</a>
+    <a ui-sref="app.primeiraTelaEdit">bla</a>
+    <!-- <a ui-sref="app.chat">chat</a>
     <a ui-sref="app.newchat">new chat</a>
     <a ui-sref="app.lobby">lobby</a> -->
 
