--- a/www/templates/primeiraTelaEdit.html
+++ b/www/templates/primeiraTelaEdit.html
@@ -64,7 +64,7 @@
         </div>
       </div>
     <span class="labels"></br></span>
-        <a class="sparara">Continuar</a>
+        <button class="sparara" ui-sref="app.segundaTelaEdit">Continuar</button>
         <span class="labels"></br></span>
         <span class="labels"></br></span>
     </div>
