chat integrated to matches

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -16,6 +16,11 @@
       </button>
     </div>
     <div class="button-bar">
+      <button ng-controller="UsersCtrl" class="button button-small button-positive light-bg waves-effect waves-button waves-light" ui-sref="app.matches">
+        Matches
+      </button>
+    </div>
+    <div class="button-bar">
       <button ng-controller="UsersCtrl" class="button button-small button-positive light-bg waves-effect waves-button waves-light" ng-click="allUsers()"ui-sref="app.users">
         Usuarios
       </button>
