update status on login and logout

--- a/www/templates/registerEmail.html
+++ b/www/templates/registerEmail.html
@@ -35,8 +35,8 @@
         <div class="col col-40">
           <span>Sexo:</span>
           <select style="border-radius: 5px;margin-top:5px;" class="item item-select" ng-model="user.gender">
-            <option ng-selected="true">Masculino</option>
-            <option>Feminino</option>
+            <option value="male" ng-selected="true">Masculino</option>
+            <option value="female">Feminino</option>
           </select>
         </div>
 
