--- a/www/templates/matches.html
+++ b/www/templates/matches.html
@@ -1,10 +1,18 @@
 <ion-view >
 
   <ion-content overflow-scroll="false">
-    <ion-list ng-repeat="match in matches">
-      <div>
-        <button class="button button-positive" ng-click="chatRoom(match.roomId)" ui-sref="app.chat">{{match.name}}</button>
-      </div>
-    </ion-list>
+
+    <div class="list">
+      <ion-list ng-repeat="match in matches">
+        <div class="item item-avatar item-button-right">
+          <img src="/img/ionic.png" ui-sref="app.profile" >
+          <h2>{{match.name}}</h2>
+          <p>Back off, man. I'm a scientist.</p>
+          <button class="button button-positive" ng-click="chatRoom(match.roomId)" ui-sref="app.chat">
+            <i class="icon ion-chatbubbles" ></i>
+          </button>
+        </div>
+      </ion-list>
+    </div>
   </ion-content>
 </ion-view>
