--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -17,6 +17,11 @@
         Usuarios
       </button>
     </div>
+    <div class="button-bar">
+      <button class="button button-small button-positive light-bg waves-effect waves-button waves-light" ui-sref="app.editprofile">
+        Editar Perfil
+      </button>
+    </div>
   </ion-content>
 
 </ion-view>
