--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -6,5 +6,17 @@
       <h2 >{{loc.name}}</h2>
     </div>
     <img ng-src="{{loc.image}}"/>
+    <div class="list">
+      <ion-list ng-repeat="user in loc.users">
+        <div class="item item-avatar item-button-right">
+          <img ng-src="data:image/jpeg;base64,{{user.avatar}}"/>
+          <h2>{{user.name}}</h2>
+          <p>{{user.description}}</p>
+          <button class="button button-positive" ui-sref="app.chat">
+            <i class="icon ion-chatbubbles" ></i>
+          </button>
+        </div>
+      </ion-list>
+    </div>
   </ion-content>
 </ion-view>
