--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -2,6 +2,23 @@
   <ion-nav-bar class="bar bar-light">
     <ion-nav-back-button ></ion-nav-back-button>
   </ion-nav-bar>  <ion-side-menu-content>
-    <ion-nav-view name="menuContent"></ion-nav-view>
+    <ion-nav-view name="menuContent"><ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+
+      <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
+        icon-off="ion-compass" ng-click="allLocations()">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-chatbubble-working" icon-off="ion-chatbubble-working"
+        ui-sref="app.matches">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
+        ui-sref="app.profile">
+      </ion-tab>
+
+    </ion-tabs></ion-nav-view>
   </ion-side-menu-content>
 </ion-side-menus>
