--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -12,7 +12,7 @@
           <img ng-src="data:image/jpeg;base64,{{user.avatar}}"/>
           <h2>{{user.name}}</h2>
           <p>{{user.description}}</p>
-          <button class="button button-positive" ui-sref="app.chat">
+          <button ng-controller="UsersCtrl" class="button button-positive" ng-click="addInteraction(user)">
             <i class="icon ion-chatbubbles" ></i>
           </button>
         </div>
